--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>B&T Garage</h1>
+<p>THe face of B&T Garage is coming soon!</p>
 </body>
 </html>
