--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>B&T Garage</h1>
-<p>THe face of B&T Garage is coming soon!</p>
+<p>The face of B&T Garage is coming soon!</p>
 </body>
 </html>
